<resources>
    <string name="app_name">MyCocktails</string>
    <string name="add_button">Add button</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="woman_with_cocktail">woman with cocktail</string>
    <string name="add_your_first_cocktail_here">Add your first cocktail here</string>
    <string name="photo_of_cocktail">photo of cocktail</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cocktail_photo">Cocktail photo</string>
    <string name="add_title">Add title</string>
</resources>